--- a/src/env/.env.dev
+++ b/src/env/.env.dev
@@ -1,8 +1,8 @@
 # DataBase config
 MONGODB_USER = admin_apigithub
 MONGODB_PASS = Xyz@789
-MONGODB_HOST = localhost
-MONGODB_PORT = 3002
+MONGODB_HOST = database
+MONGODB_PORT = 27017
 MONGODB_DATABASE = apigithub
 
 # Enviroment config
