Created the configuration for tests Crteated the db.service and its test

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "start": "node src/index.js",
         "start:dev": "nodemon src/index.js",
         "test": "mocha",
+        "test:watch": "mocha --watch",
         "lint": "eslint ."
     },
     "dependencies": {
