--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
         "lint": "eslint ."
     },
     "dependencies": {
-        "express": "^4.16.4",
+        "ajv": "^6.10.0",
         "body-parser": "^1.19.0",
-        "request": "^2.88.0",
-        "request-promise-native": "^1.0.7",
         "dotenv": "^8.0.0",
-        "mongoose": "^5.5.11"
+        "express": "^4.16.4",
+        "mongoose": "^5.5.11",
+        "request": "^2.88.0",
+        "request-promise-native": "^1.0.7"
     },
     "devDependencies": {
         "eslint": "^5.16.0",
