Changed location of services, putting into a service folder, for better organization Changed the path of service in all necessary files Added osx files to .gitignore Added supertest to package.json. This package will be used in integration tests Added information about supertest in Readme Added GITHUB config in env files Created service to connect and integrate with github Created tests for files about GITHUB integration

--- a/src/env/.env.dev
+++ b/src/env/.env.dev
@@ -8,3 +8,8 @@ MONGODB_DATABASE = apigithub
 # Enviroment config
 ENV = dev
 PORT_API = 3000
+
+# Github config
+GITHUB_AUTH_USER = put_here_your_github_user_who_have_the_token
+GITHUB_AUTH_TOKEN = put_here_your_token_to_github_with_permission_to_get_user_data
+GITHUB_URL_BASE = https://api.github.com
