--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "mocha": "^6.1.4",
         "nodemon": "^1.19.0",
         "should": "^13.2.3",
-        "sinon": "^7.3.2"
+        "sinon": "^7.3.2",
+        "supertest": "^4.0.2"
     },
     "nodemonConfig": {
         "restartable": "rs",
