--- a/src/env/.env.example
+++ b/src/env/.env.example
@@ -2,8 +2,14 @@
 MONGODB_USER = admin_apigithub
 MONGODB_PASS = Xyz@789
 MONGODB_HOST = mongodb://localhost:3002
+MONGODB_PORT = 27017
 MONGODB_DATABASE = apigithub
 
 # Enviroment config
 ENV = dev
 PORT_API = 3000
+
+# Github config
+GITHUB_AUTH_USER = put_here_your_github_user_who_have_the_token
+GITHUB_AUTH_TOKEN = put_here_your_token_to_github_with_permission_to_get_user_data
+GITHUB_URL_BASE = https://api.github.com
