Added no-timeout to test command in package, to avoid error when consuming github service - Changed the return of closeconnection from DB - Added tests to user.service - Added methods do user.service - Added methods to respositories.contorller

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "scripts": {
         "start": "node src/index.js",
         "start:dev": "nodemon src/index.js",
-        "test": "mocha --recursive",
-        "test:watch": "mocha --watch --recursive",
+        "test": "mocha --recursive --no-timeouts",
+        "test:watch": "mocha --watch --recursive --no-timeouts",
         "lint": "eslint ."
     },
     "dependencies": {
