Changed the routes, to allow a call to /:user as a master route, existing children of this routes, but ever children needs to get user Added variables to .env to change the calls to github api, using client credentials to improve the limits Adjuested the document of API, to represents exactly what the API needs to be called Finished corrections in controller and test for repositories, to pass into getStarred tests Made an update in users service, to keep the tags of repositories when the repositories got from github

--- a/src/env/.env.dev
+++ b/src/env/.env.dev
@@ -13,3 +13,5 @@ PORT_API = 3000
 GITHUB_AUTH_USER = put_here_your_github_user_who_have_the_token
 GITHUB_AUTH_TOKEN = put_here_your_token_to_github_with_permission_to_get_user_data
 GITHUB_URL_BASE = https://api.github.com
+GITHUB_CLIENT_ID = put_here_your_oaut_app_client_id
+GITHUB_CLIENT_SECRET = put_here_your_oaut_app_client_secret
