--- a/src/env/.env.example
+++ b/src/env/.env.example
@@ -13,3 +13,5 @@ PORT_API = 3000
 GITHUB_AUTH_USER = put_here_your_github_user_who_have_the_token
 GITHUB_AUTH_TOKEN = put_here_your_token_to_github_with_permission_to_get_user_data
 GITHUB_URL_BASE = https://api.github.com
+GITHUB_CLIENT_ID = put_here_your_oaut_app_client_id
+GITHUB_CLIENT_SECRET = put_here_your_oaut_app_client_secret
