Removed TESTS.md, that mustn't exists Adjusted return of get starred repositories in API docs Adjusted .env.example, to show correctly the name of Mongo container Adjusted message for tags not string in get of repositories controller

--- a/src/env/.env.example
+++ b/src/env/.env.example
@@ -1,7 +1,7 @@
 # DataBase config
 MONGODB_USER = admin_apigithub
 MONGODB_PASS = Xyz@789
-MONGODB_HOST = mongodb://localhost:3002
+MONGODB_HOST = database
 MONGODB_PORT = 27017
 MONGODB_DATABASE = apigithub
 
